<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NavJump</string>
    <string name="hello">Hello navjump!</string>



    <string name="action_list_favorites">Favorite</string>
    <string name="action_list_recents">Recent</string>
    <string name="action_list_all">All</string>



    <string name="action_add_location">Add Location</string>
    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>




</resources>